Move Popular HTML to the bottom and fix Rating Scale button spacing

--- a/htdocs/assets/css/master.css
+++ b/htdocs/assets/css/master.css
@@ -57,6 +57,7 @@ body > .grid {
 }
 #chart_scale_tip {
 	text-align:right;
+	padding-right:0.75rem;
 }
 #chart_scale_tip a:hover {
 	cursor:pointer;
